Implemented playlist api and ui

--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -13,6 +13,7 @@
           type="email"
           name="email"
           placeholder="your@email.com"
+          required
         />
       </div>
 
@@ -23,6 +24,7 @@
           type="password"
           name="password"
           placeholder="your password"
+          required
         />
       </div>
 
