--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -17,6 +17,7 @@
           type="email"
           name="email"
           placeholder="your@email.com"
+          required
         />
       </div>
 
@@ -27,6 +28,7 @@
           type="password"
           name="password"
           placeholder="your password"
+          required
         />
       </div>
       <button class="btn btn-primary mt-2" type="submit">Login</button>
