--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,5 +14,6 @@
       let firstScriptElement = document.getElementsByTagName("script")[0]
       firstScriptElement.parentNode.insertBefore(tag, firstScriptElement)
     </script>
+    <script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
   </body>
 </html>
